--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <meta property="og:title" content="Yale School of Art - Graduate Programs in Art & Design" />
     <meta property="og:description" content="Yale School of Art offers MFA degrees in Graphic Design, Painting/Printmaking, Photography, and Sculpture." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/yale-art-digital-haven/assets/hero-image.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@YaleSchoolArt" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/yale-art-digital-haven/assets/hero-image.jpg" />
   </head>
 
   <body>
