add logo to tab

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>Yale School of Art - Graduate Programs in Art & Design</title>
     <meta name="description" content="Yale School of Art offers MFA degrees in Graphic Design, Painting/Printmaking, Photography, and Sculpture. Join our world-class art education program." />
     <meta name="author" content="Yale School of Art" />
-    
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/yale-logo.png" />
+    <link rel="apple-touch-icon" href="/yale-logo.png" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;600;700&display=swap" rel="stylesheet">
